Fixed some bugs as reported by FindBugs in Nephele's server module